--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"private": true,
 	"type": "module",
+	"homepage": "https://necrifede.github.io/tatum-hello",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
